--- a/public/global.css
+++ b/public/global.css
@@ -2,6 +2,9 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+
+	background: url("cinema.jpeg") no-repeat center center fixed;
+	background-size: cover;
 }
 
 body {
@@ -60,4 +63,58 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+form {
+	background-color: #132828b5;
+	padding: 20px;
+	/*margin-top: 100px;*/
+	height: 120px;
+}
+
+input[type=text] {
+	width: 100%;
+	border: 2px solid #aaa;
+	border-radius: 4px;
+	margin: 8px 0;
+	outline: none;
+	padding: 8px;
+	box-sizing: border-box;
+	transition: .3s;
+}
+
+input[type=text]:focus {
+	border-color: dodgerblue;
+	box-shadow: 0 0 8px 0 dodgerblue;
+}
+
+button {
+	margin-top: 10px;
+	background-color: #0078e7;
+	border: none;
+	color: white;
+	padding: 10px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	width: 100%;
+}
+
+button:disabled {
+	background-color: #656565;
+}
+
+.error {
+	color: red;
+}
+
+.success {
+	color: green;
+}
+
+form span {
+	display: block;
+	font-size: 12px;
+	max-width: 500px;
 }
